@startuml
hide circle
skinparam linetype ortho

entity "rol" {
  *rol_id : SERIAL <<PK>>
  *codigo : VARCHAR(20)
  *nombre : VARCHAR(60)
  descripcion : TEXT
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "usuario" {
  *usuario_id : SERIAL <<PK>>
  *nombre_usuario : VARCHAR(80)
  *nombre_completo : VARCHAR(120)
  *correo : VARCHAR(255)
  telefono : VARCHAR(15)
  *password_hash : VARCHAR(255)
  activo : BOOLEAN
  intentos_fallidos : INT
  bloqueado_hasta : TIMESTAMPTZ
  ultimo_acceso : TIMESTAMPTZ
  debe_cambiar_pwd : BOOLEAN
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "usuario_rol" {
  *usuario_rol_id : SERIAL <<PK>>
  *usuario_id : INT <<FK>>
  *rol_id : INT <<FK>>
  asignado_en : TIMESTAMPTZ
  asignado_por : INT <<FK>>
  activo : BOOLEAN
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "usuario_permiso_modulo" {
  *permiso_id : SERIAL <<PK>>
  *usuario_id : INT <<FK>>
  *modulo : VARCHAR(30)
  *nivel : VARCHAR(25)
  activo : BOOLEAN
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
}

entity "intento_login" {
  *intento_id : SERIAL <<PK>>
  usuario_id : INT <<FK>>
  *nombre_usuario_intentado : VARCHAR(80)
  *exitoso : BOOLEAN
  direccion_ip : VARCHAR(45)
  user_agent : TEXT
  creado_en : TIMESTAMPTZ
}

entity "token_revocado" {
  *id : BIGSERIAL <<PK>>
  *jti : VARCHAR(36)
  *usuario_id : INT <<FK>>
  revocado_en : TIMESTAMPTZ
  *expira_en : TIMESTAMPTZ
}

entity "configuracion_global" {
  *configuracion_id : INT <<PK>>
  *monto_recargo_defecto : NUMERIC(12,2)
  *dias_gracia_recargo : INT
  *plazo_inscripcion_dias : INT
  *umbrales_smtp_dias : JSONB
  actualizado_en : TIMESTAMPTZ
}

entity "log_auditoria" {
  *log_id : BIGSERIAL <<PK>>
  usuario_id : INT <<FK>>
  *accion : VARCHAR(10)
  *tabla_afectada : VARCHAR(60)
  *registro_id : VARCHAR(50)
  valores_antes : JSONB
  valores_despues : JSONB
  fecha_hora : TIMESTAMPTZ
  direccion_ip : VARCHAR(45)
  descripcion : TEXT
}

entity "nivel_educativo" {
  *nivel_id : SERIAL <<PK>>
  *codigo : VARCHAR(15)
  *nombre : VARCHAR(60)
  rvoe : VARCHAR(40)
  *orden : INT
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "ciclo_escolar" {
  *ciclo_id : SERIAL <<PK>>
  *nombre : VARCHAR(20)
  *fecha_inicio : DATE
  *fecha_fin : DATE
  activo : BOOLEAN
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "grupo" {
  *grupo_id : SERIAL <<PK>>
  *nivel_id : INT <<FK>>
  *ciclo_id : INT <<FK>>
  *nombre : VARCHAR(10)
  *cupo_maximo : INT
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "materia" {
  *materia_id : SERIAL <<PK>>
  *nombre : VARCHAR(80)
  *clave : VARCHAR(20)
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "grupo_materia" {
  *grupo_materia_id : SERIAL <<PK>>
  *grupo_id : INT <<FK>>
  *materia_id : INT <<FK>>
  docente_id : INT <<FK>>
}

entity "tutor" {
  *tutor_id : SERIAL <<PK>>
  *nombre_completo : VARCHAR(120)
  correo_electronico : VARCHAR(255)
  telefono : VARCHAR(15)
  direccion : TEXT
  curp : VARCHAR(18)
  requiere_factura : BOOLEAN
  tipo_pago_habitual : VARCHAR(15)
  saldo_a_favor : NUMERIC(12,2)
  activo : BOOLEAN
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "datos_fiscales" {
  *fiscal_id : SERIAL <<PK>>
  *tutor_id : INT <<FK>>
  *rfc : VARCHAR(13)
  *razon_social : VARCHAR(120)
  regimen_fiscal : VARCHAR(10)
  uso_cfdi : VARCHAR(10)
  direccion_fiscal : TEXT
  codigo_postal : VARCHAR(10)
  correo_facturacion : VARCHAR(255)
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
}

entity "alumno" {
  *alumno_id : SERIAL <<PK>>
  matricula : VARCHAR(30)
  *curp : VARCHAR(18)
  *nombre_completo : VARCHAR(120)
  *fecha_nacimiento : DATE
  *sexo : CHAR(1)
  *nivel_id : INT <<FK>>
  *estado : VARCHAR(20)
  fecha_baja : DATE
  motivo_baja : TEXT
  dia_limite_pago : INT
  personas_autorizadas : JSONB
  tipo_sangre : VARCHAR(10)
  alergias : TEXT
  padecimientos : TEXT
  observaciones : TEXT
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "tutor_alumno" {
  *tutor_alumno_id : SERIAL <<PK>>
  *tutor_id : INT <<FK>>
  *alumno_id : INT <<FK>>
  es_principal : BOOLEAN
  *parentesco : VARCHAR(20)
  creado_en : TIMESTAMPTZ
}

entity "tarifa" {
  *tarifa_id : SERIAL <<PK>>
  *ciclo_id : INT <<FK>>
  *nivel_id : INT <<FK>>
  *concepto : VARCHAR(15)
  *monto : NUMERIC(12,2)
  descripcion : TEXT
  activa : BOOLEAN
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "plan_pago" {
  *plan_pago_id : SERIAL <<PK>>
  *nombre : VARCHAR(40)
  *meses : INT
  *monto_mensual : NUMERIC(12,2)
  monto_diciembre : NUMERIC(12,2)
  descripcion : TEXT
  activo : BOOLEAN
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "inscripcion_ciclo" {
  *inscripcion_id : SERIAL <<PK>>
  *alumno_id : INT <<FK>>
  *ciclo_id : INT <<FK>>
  grupo_id : INT <<FK>>
  *plan_pago_id : INT <<FK>>
  *fecha_ingreso : DATE
  es_ingreso_tardio : BOOLEAN
  *estado_en_ciclo : VARCHAR(20)
  *estado_financiero : VARCHAR(20)
  meses_adeudo : INT
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "calendario_pago" {
  *calendario_pago_id : SERIAL <<PK>>
  *alumno_id : INT <<FK>>
  *ciclo_id : INT <<FK>>
  *concepto : VARCHAR(25)
  mes : VARCHAR(15)
  *fecha_vencimiento : DATE
  *monto_original : NUMERIC(12,2)
  monto_pagado : NUMERIC(12,2)
  monto_recargo : NUMERIC(12,2)
  *saldo_pendiente : NUMERIC(12,2)
  *estado_cobro : VARCHAR(15)
  liquidado_at : TIMESTAMPTZ
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "pago" {
  *pago_id : SERIAL <<PK>>
  *alumno_id : INT <<FK>>
  *tutor_id : INT <<FK>>
  *fecha_pago : DATE
  *monto_total : NUMERIC(12,2)
  *metodo_pago : VARCHAR(20)
  aplicado_a_saldo : BOOLEAN
  observaciones : TEXT
  *registrado_por : INT <<FK>>
  registrado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
}

entity "aplicacion_pago" {
  *aplicacion_id : SERIAL <<PK>>
  *pago_id : INT <<FK>>
  *calendario_pago_id : INT <<FK>>
  *monto_aplicado : NUMERIC(12,2)
  *aplicado_a : VARCHAR(15)
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
}

entity "recargo" {
  *recargo_id : SERIAL <<PK>>
  *calendario_pago_id : INT <<FK>>
  *monto_original : NUMERIC(12,2)
  *monto_actual : NUMERIC(12,2)
  *estado : VARCHAR(15)
  motivo_modificacion : TEXT
  *aplicado_en : DATE
  modificado_por : INT <<FK>>
  modificado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
}

entity "movimiento_saldo" {
  *movimiento_id : SERIAL <<PK>>
  *tutor_id : INT <<FK>>
  *tipo : VARCHAR(15)
  *monto : NUMERIC(12,2)
  pago_id : INT <<FK>>
  aplicacion_id : INT <<FK>>
  descripcion : TEXT
  *creado_por : INT <<FK>>
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
}

entity "beca" {
  *beca_id : SERIAL <<PK>>
  *nombre_beca : VARCHAR(60)
  *criterio : VARCHAR(25)
  *porcentaje : NUMERIC(5,2)
  descripcion : TEXT
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "solicitud_beca" {
  *solicitud_id : SERIAL <<PK>>
  *alumno_id : INT <<FK>>
  *beca_id : INT <<FK>>
  *ciclo_id : INT <<FK>>
  motivo : TEXT
  *estado : VARCHAR(15)
  *solicitada_por : INT <<FK>>
  resuelta_por : INT <<FK>>
  observaciones : TEXT
  fecha_solicitud : TIMESTAMPTZ
  fecha_resolucion : TIMESTAMPTZ
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "asignacion_beca" {
  *asignacion_id : SERIAL <<PK>>
  *alumno_id : INT <<FK>>
  *beca_id : INT <<FK>>
  *ciclo_id : INT <<FK>>
  solicitud_id : INT <<FK>>
  *estado : VARCHAR(15)
  *fecha_asignacion : DATE
  fecha_retiro : DATE
  motivo_retiro : TEXT
  *asignada_por : INT <<FK>>
  retirada_por : INT <<FK>>
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "ventana_inscripcion_temprana" {
  *ventana_id : SERIAL <<PK>>
  *ciclo_id : INT <<FK>>
  *fecha_inicio : DATE
  *fecha_fin : DATE
  *beca_id : INT <<FK>>
  activa : BOOLEAN
  creado_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

entity "calificacion" {
  *calificacion_id : SERIAL <<PK>>
  *alumno_id : INT <<FK>>
  *grupo_materia_id : INT <<FK>>
  *periodo_id : INT
  *tipo_evaluacion : VARCHAR(15)
  valor_numerico : NUMERIC(4,2)
  valor_cualitativo : VARCHAR(5)
  texto_observacion : TEXT
  texto_recomendacion : TEXT
  cuenta_para_promedio : BOOLEAN
  *registrada_por : INT <<FK>>
  registrada_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
}

entity "asistencia" {
  *asistencia_id : SERIAL <<PK>>
  *alumno_id : INT <<FK>>
  *grupo_materia_id : INT <<FK>>
  *fecha : DATE
  *estado : VARCHAR(10)
  justificacion : TEXT
  *registrada_por : INT <<FK>>
  registrada_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
}

entity "documento" {
  *documento_id : SERIAL <<PK>>
  *tipo_documento : VARCHAR(25)
  *nombre_original : VARCHAR(255)
  *ruta_almacen : TEXT
  *mime_type : VARCHAR(100)
  *tamano_bytes : BIGINT
  hash_sha256 : CHAR(64)
  alumno_id : INT <<FK>>
  tutor_id : INT <<FK>>
  pago_id : INT <<FK>>
  *subido_por : INT <<FK>>
  subido_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
}

entity "notificacion" {
  *notificacion_id : SERIAL <<PK>>
  *tipo : VARCHAR(30)
  *canal : VARCHAR(10)
  destinatario_tutor_id : INT <<FK>>
  *destinatario_email : VARCHAR(255)
  *asunto : VARCHAR(160)
  *cuerpo : TEXT
  *estado : VARCHAR(15)
  intentos : INT
  error_ultimo : TEXT
  *programada_para : TIMESTAMPTZ
  enviada_en : TIMESTAMPTZ
  alumno_id : INT <<FK>>
  calendario_pago_id : INT <<FK>>
  creada_en : TIMESTAMPTZ
  actualizado_en : TIMESTAMPTZ
  eliminado_en : TIMESTAMPTZ
}

tutor ||--o{ datos_fiscales
materia ||--o{ grupo_materia
ciclo_escolar ||--o{ tarifa
alumno ||--o{ notificacion
nivel_educativo ||--o{ tarifa
beca ||--o{ ventana_inscripcion_temprana
grupo_materia ||--o{ calificacion
alumno ||--o{ solicitud_beca
ciclo_escolar ||--o{ ventana_inscripcion_temprana
usuario ||--o{ log_auditoria
ciclo_escolar ||--o{ solicitud_beca
usuario ||--o{ asistencia
tutor ||--o{ tutor_alumno
alumno ||--o{ documento
alumno ||--o{ asignacion_beca
pago ||--o{ aplicacion_pago
alumno ||--o{ pago
solicitud_beca ||--o{ asignacion_beca
tutor ||--o{ movimiento_saldo
nivel_educativo ||--o{ alumno
tutor ||--o{ pago
usuario ||--o{ calificacion
usuario ||--o{ documento
tutor ||--o{ notificacion
usuario ||--o{ intento_login
grupo ||--o{ inscripcion_ciclo
plan_pago ||--o{ inscripcion_ciclo
alumno ||--o{ calendario_pago
ciclo_escolar ||--o{ calendario_pago
usuario ||--o{ usuario_permiso_modulo
usuario ||--o{ asignacion_beca
usuario ||--o{ recargo
calendario_pago ||--o{ notificacion
alumno ||--o{ inscripcion_ciclo
usuario ||--o{ pago
ciclo_escolar ||--o{ asignacion_beca
calendario_pago ||--o{ recargo
ciclo_escolar ||--o{ inscripcion_ciclo
usuario ||--o{ usuario_rol
grupo_materia ||--o{ asistencia
rol ||--o{ usuario_rol
alumno ||--o{ asistencia
usuario ||--o{ solicitud_beca
usuario ||--o{ token_revocado
nivel_educativo ||--o{ grupo
usuario ||--o{ grupo_materia
beca ||--o{ asignacion_beca
calendario_pago ||--o{ aplicacion_pago
alumno ||--o{ calificacion
tutor ||--o{ documento
pago ||--o{ movimiento_saldo
alumno ||--o{ tutor_alumno
ciclo_escolar ||--o{ grupo
beca ||--o{ solicitud_beca
pago ||--o{ documento
usuario ||--o{ movimiento_saldo
aplicacion_pago ||--o{ movimiento_saldo
grupo ||--o{ grupo_materia
@enduml
